force-app/main/default/objects/B25__Sync_Connection__c/B25__Sync_Connection__c.object-meta.xml
<CustomObject>
    <label>Sync Connection</label>
    <nameField>
        <displayFormat>CSC-{0000}</displayFormat>
        <label>Sync Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>