force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Activate_After_Validation__c.field-meta.xml
<CustomField>
    <fullName>B25__Activate_After_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked Booker25 wil attempt to automatically activate this connection after the details have been
		validated through the API.</description>
    <inlineHelpText>Lorsque cette case est cochée, Booker25 tentera d’activer automatiquement cette connexion après que les détails aient été validés par le biais de l’API.</inlineHelpText>
    <label>Activate After Validation</label>
    <type>Checkbox</type>
</CustomField>