force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Active__c.field-meta.xml
<CustomField>
    <fullName>B25__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When unchecked the linked record will no longer sync.</description>
    <inlineHelpText>Lorsque cette option pas cochée, l’enregistrement connexe ne sera plus synchronisé.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>