force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Calendar_Id__c</fullName>
    <description>Id of the calendar specified with calendar name.</description>
    <inlineHelpText>Identifiant du calendrier spécifié avec le nom du calendrier.</inlineHelpText>
    <label>Calendar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>