force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Calendar_Name__c.field-meta.xml
<CustomField>
    <fullName>B25__Calendar_Name__c</fullName>
    <description>The optional name of the calendar Booker25 events should be synced to and from. When not specified the
		user&apos;s primary calendar is used.</description>
    <inlineHelpText>Le nom facultatif du calendrier à partir duquel et vers lequel les événements Booker25 doivent être synchronisés. S’il n’est pas spécifié, le calendrier principal de l’utilisateur est utilisé.</inlineHelpText>
    <label>Calendar Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>