force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Resource__c.field-meta.xml
<CustomField>
    <fullName>B25__Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>B25__Resource__c</referenceTo>
    <relationshipName>Calendar_Sync_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>