force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Secondary_Delta_Token__c.field-meta.xml
<CustomField>
    <fullName>B25__Secondary_Delta_Token__c</fullName>
    <description>Secondary Outlook Delta token.</description>
    <label>Secondary Delta Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>