force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Staff__c.field-meta.xml
<CustomField>
    <fullName>B25__Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff</label>
    <referenceTo>B25__Staff__c</referenceTo>
    <relationshipLabel>Calendar Sync Connections</relationshipLabel>
    <relationshipName>Calendar_Sync_Connections</relationshipName>
    <type>Lookup</type>
</CustomField>