force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__Subscription_Id__c</fullName>
    <description>Id of the live subscription for this connection.</description>
    <externalId>true</externalId>
    <inlineHelpText>Identifiant de l’abonnement en direct pour cette connexion.</inlineHelpText>
    <label>Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>