force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Use_Live_Sync__c.field-meta.xml
<CustomField>
    <fullName>B25__Use_Live_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled Booker25 will setup a live subscription and updates in the external system will trigger updates in Booker25 in near real time.</description>
    <inlineHelpText>Lorsque cette option est activée, Booker25 met en place un abonnement en direct et les actualisations dans le système externe déclenchent des actualisations dans Booker25 en temps presque réel.</inlineHelpText>
    <label>Use Live Sync</label>
    <type>Checkbox</type>
</CustomField>