force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__User_Id__c.field-meta.xml
<CustomField>
    <fullName>B25__User_Id__c</fullName>
    <description>The id of the user this record should be synced with. In most cases this is the email address of the
		user.</description>
    <inlineHelpText>L’identifiant de l’utilisateur avec lequel cet enregistrement doit être synchronisé. Dans la plupart des cas, il s’agit de l’adresse e-mail de l’utilisateur.</inlineHelpText>
    <label>User Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>