force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__User_Type__c.field-meta.xml
<CustomField>
    <fullName>B25__User_Type__c</fullName>
    <description>What type of user this record syncs to. This is used to properly set the attendee type.</description>
    <inlineHelpText>Le type d’utilisateur pour lequel cet enregistrement est synchronisé. Ceci est utilisé pour définir correctement le type de participant.</inlineHelpText>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>user</fullName>
                <default>true</default>
                <label>User</label>
            </value>
            <value>
                <fullName>resource</fullName>
                <label>Resource</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>