force-app/main/default/objects/B25__Sync_Connection__c/fields/B25__Valid__c.field-meta.xml
<CustomField>
    <fullName>B25__Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Both the user and the calendar ids exist according to the API.</description>
    <inlineHelpText>Les identifiants de l’utilisateur et du calendrier existent tous deux selon l’API.</inlineHelpText>
    <label>Valid</label>
    <type>Checkbox</type>
</CustomField>