force-app/main/default/objects/B25__Sync_Connection__c/recordTypes/B25__Google_Sync_Connection.recordType-meta.xml
<RecordType>
    <fullName>B25__Google_Sync_Connection</fullName>
    <active>true</active>
    <description>Sync connection for connecting to Google Calendar</description>
    <label>Google Sync Connection</label>
</RecordType>