force-app/main/default/objects/B25__Sync_Connection__c/recordTypes/B25__Outlook_Sync_Connection.recordType-meta.xml
<RecordType>
    <fullName>B25__Outlook_Sync_Connection</fullName>
    <active>true</active>
    <description>Sync connection for connecting to Outlook Calendar</description>
    <label>Outlook Sync Connection</label>
</RecordType>