force-app/main/default/objects/B25__Sync_Connection__c/listViews/B25__All.listView-meta.xml
<ListView>
    <fullName>B25__All</fullName>
    <columns>NAME</columns>
    <columns>B25__User_Id__c</columns>
    <columns>B25__Active__c</columns>
    <columns>B25__Valid__c</columns>
    <columns>B25__Use_Live_Sync__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>