force-app/main/default/objects/B25__Sync_Connection__c/listViews/B25__Staff_Connections.listView-meta.xml
<ListView>
    <fullName>B25__Staff_Connections</fullName>
    <columns>NAME</columns>
    <columns>B25__Staff__c</columns>
    <columns>B25__User_Id__c</columns>
    <columns>B25__Valid__c</columns>
    <columns>B25__Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>B25__Staff__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Staff Connections</label>
</ListView>